# Configuration options

option('gl',
        type: 'boolean',
        description: 'OpenGL 1.0 Engine')
option('glesv1_cm',
        type: 'boolean',
        description: 'OpenGL ES 1.1 CM Engine')
option('glesv2',
        type: 'boolean',
        description: 'OpenGL ES 2.0 Engine')

option('gl-x11',
        type: 'boolean',
        description: 'OpenGL extension for Xlib Backend')
option('gl-directfb',
        type: 'boolean',
        description: 'OpenGL extension for DirectFB Backend')
option('gl-fbdev',
        type: 'boolean',
        description: 'OpenGL extension for Linux Framebuffer Backend')
option('egl-x11',
        type: 'boolean',
        description: 'EGL interface for Xlib Backend')
option('egl-directfb',
        type: 'boolean',
        description: 'EGL interface for DirectFB Backend')
option('egl-fbdev',
        type: 'boolean',
        description: 'EGL interface for Linux Framebuffer Backend')
option('egl-wayland',
        type: 'boolean',
        description: 'EGL interface for Wayland Backend')
option('egl-xcb',
        type: 'boolean',
        description: 'EGL interface for XCB Backend')
option('egl-drm',
        type: 'boolean',
        description: 'EGL interface for DRM Backend')
option('egl-rpi',
        type: 'boolean',
        description: 'EGL interface for Raspberry Pi Dispmanx Backend')

option('vk-x11',
        type: 'boolean',
        description: 'Vulkan extension for Xlib WSI')
option('vk-directfb',
        type: 'boolean',
        description: 'Vulkan extension for DirectFB WSI')
option('vk-fbdev',
        type: 'boolean',
        description: 'Vulkan extension for Linux Framebuffer WSI')
option('vk-wayland',
        type: 'boolean',
        description: 'Vulkan extension for Wayland WSI')
option('vk-xcb',
        type: 'boolean',
        description: 'Vulkan extension for XCB WSI')
option('vk-d2d',
        type: 'boolean',
        description: 'Vulkan extension for Direct-to-Display WSI')

option('efl',
        type: 'boolean',
        description: 'EFL GUI Toolkit')
option('fltk',
        type: 'boolean',
        description: 'FLTK GUI Toolkit')
option('glfw',
        type: 'boolean',
        description: 'GLFW GUI Toolkit')
option('glut',
        type: 'boolean',
        description: 'GLUT GUI Toolkit')
option('gtk',
        type: 'boolean',
        description: 'GTK+ GUI Toolkit')
option('qt',
        type: 'boolean',
        description: 'Qt GUI Toolkit')
option('sdl',
        type: 'boolean',
        description: 'SDL GUI Toolkit')
option('sfml',
        type: 'boolean',
        description: 'SFML GUI Toolkit')
option('wx',
        type: 'boolean',
        description: 'wxWidgets GUI Toolkit')

option('with-gtk',
        type: 'combo',
        choices : ['2', '3'],
        value : '3',
        description: 'GTK+ GUI Toolkit version')
option('with-qt',
        type: 'combo',
        choices : ['4', '5'],
        value : '5',
        description: 'Qt GUI Toolkit version')
option('with-sdl',
        type: 'combo',
        choices : ['1', '2'],
        value : '2',
        description: 'SDL GUI Toolkit version')

option('png',
        type: 'boolean',
        description: 'PNG loader')
option('tiff',
        type: 'boolean',
        description: 'TIFF loader')
